--- a/src/DeadTool/.classpath
+++ b/src/DeadTool/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/NetworkTables.jar"/>
-	<classpathentry kind="lib" path="lib/WPILib.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/NetworkTables.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/WPILib.jar"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
